# docs/swagger.yaml
@@ -139,6 +139,8 @@ definitions:
     type: object
   dto.CreateUserRequest:
     properties:
+      driver_id:
+        type: string
       email:
         type: string
       name:
@@ -970,6 +972,8 @@ definitions:
     type: object
   dto.UpdateUserRequest:
     properties:
+      driver_id:
+        type: string
       email:
         type: string
       is_active:
@@ -1015,6 +1019,10 @@ definitions:
     properties:
       created_at:
         type: string
+      driver_id:
+        type: string
+      driver_name:
+        type: string
       email:
         type: string
       id:
@@ -1034,6 +1042,8 @@ definitions:
     type: object
   dto.UserResponse:
     properties:
+      driver_id:
+        type: string
       email:
         type: string
       id:
