# dto/user.go
@@ -6,6 +6,7 @@ type CreateUserRequest struct {
 	Phone    string `json:"phone"`
 	Password string `json:"password" validate:"required,min=6"`
 	RoleId   string `json:"role_id" validate:"required"`
+	DriverId string `json:"driver_id"`
 }
 
 type UpdateUserRequest struct {
@@ -15,18 +16,21 @@ type UpdateUserRequest struct {
 	RoleId   string `json:"role_id" validate:"required"`
 	Password string `json:"password" validate:"omitempty,min=6"`
 	IsActive bool   `json:"is_active"`
+	DriverId string `json:"driver_id"`
 }
 
 type UserListResponse struct {
-	Id             string `json:"id"`
-	Name           string `json:"name"`
-	Email          string `json:"email"`
-	Phone          string `json:"phone"`
-	RoleId         string `json:"role_id"`
-	RoleName       string `json:"role_name"`
-	IsActive       bool   `json:"is_active"`
-	LastLoggedInAt string `json:"last_logged_in_at,omitempty"`
-	CreatedAt      string `json:"created_at"`
+	Id             string  `json:"id"`
+	Name           string  `json:"name"`
+	Email          string  `json:"email"`
+	Phone          string  `json:"phone"`
+	RoleId         string  `json:"role_id"`
+	RoleName       string  `json:"role_name"`
+	DriverId       *string `json:"driver_id,omitempty"`
+	DriverName     string  `json:"driver_name,omitempty"`
+	IsActive       bool    `json:"is_active"`
+	LastLoggedInAt string  `json:"last_logged_in_at,omitempty"`
+	CreatedAt      string  `json:"created_at"`
 }
 
 type PaginatedUserList struct {
